--- a/module/Page/view/page/page/banners.phtml
+++ b/module/Page/view/page/page/banners.phtml
@@ -1,3 +1,6 @@
+<?php $this->headMeta()->appendName('description', 'abc mediagroup')
+?>
+
 <div class="title-line"></div>
 <div class="title-contacts">Баннеры</div>
 <div class="title-line"></div>
