very goog styles :), fonts, some changes

--- a/module/Page/view/page/page/design.phtml
+++ b/module/Page/view/page/page/design.phtml
@@ -9,82 +9,81 @@
 </div>
 <div class="title_text">WEB Design</div>
 
-<div class="design-body-block_1">WEB Дизайн от ABC Веб Медиа</div>
+<div class="body-block_1 magrin_top_20">WEB Дизайн от ABC Медиа Групп</div>
 
-<div class="marketing-body-block_2">
+<div class="body-block_3 magrin_top_20">
     Что такое современный сайт?
 </div>
 
-<div class="design-body-block_3">Это единый инструмент который является лицом компании, офисом, отделом продаж и отделом<br/>
-    по работе с клиентами. От того, на сколько Ваш сайт привлекателен, удобен в работе и<br/>
-    популярен - зависит успех любого бизнес проекта.</div>
+<div class="body-block_1 magrin_top_20">Это единый инструмент, который является лицом компании, офисом, отделом продаж и отделом 
+    по работе с клиентами. От того, на сколько Ваш сайт привлекателен, удобен в работе и 
+    популярен - зависит успех любого бизнес проекта.
+</div>
 
-<div class="marketing-body-block_2">
+<div class="body-block_3 magrin_top_20">
     У Вас нет сайта?
 </div>
 
-<div class="design-body-block_5">
+<div class="body-block_4 magrin_top_20">
     МЫ ПОМОЖЕМ:
 </div>
 
-<div class="marketing-body-block_6">
-    <ul>
-        <li>разработать дизайн сайта привлекательный для Вашей целевой аудитории</li>
-        <li>интернет магазин которым удобно пользоваться</li>
-        <li>создать сайт который удобно и НЕ ДОРОГО поддерживать, обслуживать и развивать</li>
-        <li>разработать сайт, оптимизированный под поисковые системы</li>
-        <li>разработать мобильную версию сайта или приложение для Android, IOS (Apple), Windowsphone</li>
-    </ul>
-</div>
+<ul class="body-ul_1 body-color body-background magrin_top_20">
+    <li>разработать дизайн сайта привлекательный для Вашей целевой аудитории</li>
+    <li>интернет магазин которым удобно пользоваться</li>
+    <li>создать сайт, который удобно и <b>НЕ ДОРОГО</b> поддерживать, обслуживать и развивать</li>
+    <li>разработать сайт, оптимизированный под поисковые системы</li>
+    <li>разработать мобильную версию сайта или приложение для Android, IOS (Apple), Windowsphone</li>
+</ul>
 
-<div class="marketing-body-block_2">
+<div class="body-block_3 magrin_top_20">
     У вас уже есть сайт, но вы хотите чего-то нового?
 </div>
 
-<div class="design-body-block_5">
+<div class="body-block_4 magrin_top_20">
     НАША КОМПАНИЯ ПОМОЖЕТ:
 </div>
 
-<div class="marketing-body-block_6">
-    <ul>
-        <li>провести аудит и оптимизацию уже существующего сайта</li>
-        <li>провести ребрендинг всего проекта или отдельных страниц</li>
-        <li>внедрить системы управления сайтом и контроля заказов</li>
-        <li>разработать дополнительные разделы сайта</li>
-        <li>разработать международную версию существующего сайта</li>
-    </ul>
+<ul class="body-ul_1 body-color body-background magrin_top_20">
+    <li>провести аудит и оптимизацию уже существующего сайта</li>
+    <li>провести ребрендинг всего проекта или отдельных страниц</li>
+    <li>внедрить системы управления сайтом и контроля заказов</li>
+    <li>разработать дополнительные разделы сайта</li>
+    <li>разработать международную версию существующего сайта</li>
+</ul>
+
+<div class="body-block_6 body-color magrin_top_20">
+    Вебстудия компании Азбука Mediagroup - команда профессиональных дизайнеров и 
+    программистов, с опытом работы более 10 лет. Мы создаем сайты, ориентированные 
+    прежде всего на удобство пользователя. В работе используются самые современные подходы и технологии.
 </div>
 
-<div class="promotion-body-block_8">
-    Вебстудия компании Азбука Вебмедиа - команда профессиональныйх дизайнеров и программистов, с опытом работы более 10 лет. Мы создаем сайты ориентированные прежде всего на удобство пользователя. В работе используются самые современные подходы и технологии
-</div>
+<div class="body-block_5 magrin_top_20">Цены:*</div>
 
-<div class="promotion-body-block_7">Цены:*</div>
-
-<div class="promotion-body-table2">
-    <div class="promotion-body-table2-cell">
-        <div class="promotion-body-table2-cell_title">от 500 у.е</div>
-        <div class="promotion-body-table2-cell_text">Разработка<br/>сайта компании</div>
+<div class="body-table2">
+    <div class="body-table2-cell">
+        <div class="body-table2-cell_title">от 500 у.е</div>
+        <div class="body-table2-cell_text">Разработка<br/>сайта компании</div>
     </div>
-    <div class="promotion-body-table2-cell">
-        <div class="promotion-body-table2-cell_title">от 1000 у.е</div>
-        <div class="promotion-body-table2-cell_text">Сайт с каталогом<br/>продукции либо интернет магазин</div>
+    <div class="body-table2-cell">
+        <div class="body-table2-cell_title">от 1000 у.е</div>
+        <div class="body-table2-cell_text">Сайт с каталогом<br/>продукции либо интернет магазин</div>
     </div>
-    <div class="promotion-body-table2-cell">
-        <div class="promotion-body-table2-cell_title">от 3000 у.е.</div>
-        <div class="promotion-body-table2-cell_text">Медийные или<br/>торговые порталы</div>
+    <div class="body-table2-cell">
+        <div class="body-table2-cell_title">от 3000 у.е.</div>
+        <div class="body-table2-cell_text">Медийные или<br/>торговые порталы</div>
     </div>
 </div>
 
-<div class="design-body-banners">
+<div class="design-body-slider">
     <?php echo $this->Design(); ?>
 </div>
 
-<div class="design-body-block_1">Вы можете связаться с нами через форму на сайте или заказать звонок менеджера</div>
+<div class="body-block_8">*Вы можете связаться с нами через форму на сайте или заказать звонок менеджера</div>
 
-<div class="promotion-body-block_9">
+<div class="body-block_7">
     <a href="<?= $this->url('page', array('action' => 'checkout')) ?>">
-        <div class="promotion-body-button_order">ОФОРМИТЬ ЗАКАЗ</div>
+        <div class="body-button">ОФОРМИТЬ ЗАКАЗ</div>
     </a>
 </div>
 
@@ -112,8 +111,8 @@
         })();
 
         pager_controls();
-        var bannerSlider = $('.design-body-banners').bxSlider({
-            slideWidth: $('.design-body-banners_row').width(),
+        var bannerSlider = $('.design-body-slider').bxSlider({
+            slideWidth: $('.design-body-slider_row').width(),
             minSlides: 1,
             moveSlides: 1,
             controls: controls,
@@ -125,7 +124,7 @@
                 pager_controls();
                 bannerSlider.destroySlider();
                 bannerSlider.reloadSlider({
-                    slideWidth: $('.design-body-banners_row').width(),
+                    slideWidth: $('.design-body-slider_row').width(),
                     minSlides: 1,
                     moveSlides: 1,
                     controls: controls,
