--- a/module/Page/view/page/page/marketing.phtml
+++ b/module/Page/view/page/page/marketing.phtml
@@ -9,24 +9,23 @@
 </div>
 <div class="title_text">WEB Маркетинг</div>
 
-<div class="promotion-body-block_1">
-    <p>Маркетинговые исследования в интернете - незаменимый инструмент<br/>
-        позволяющий быстро эффективно проводить сбор и анализ данных с различных целевых рынков</p>
+<div class="body-block_1 magrin_top_10">
+    Маркетинговые исследования в интернете - незаменимый инструмент<br/>
+    позволяющий быстро и эффективно проводить сбор и анализ данных с различных целевых рынков
 </div>
 
-<div class="marketing-body-block_3_part1">
+<div class="marketing-body-image_part1">
 
 </div>
-<div class="marketing-body-block_3_part2">
+<div class="marketing-body-image_part2">
 
 </div>
 
-<div class="marketing-body-block_2">
-    Маркетинговые услуги от компании Азбука Вебмедиа:
+<div class="body-block_9 magrin_top_10">
+    Маркетинговые услуги от компании Азбука Медиа Групп:
 </div>
 
-<div class="marketing-body-block_6">
-    <ul>
+    <ul class="body-ul_1 body-background body-color magrin_top_20">
         <li>Создание и продвижение тестовых продуктов в исследовательских целях</li>
         <li>Сбор и анализ рыночной информации о конкурентах</li>
         <li>Проведение опросов целевых групп пользователей</li>
@@ -37,39 +36,38 @@
         <li>Маркетинговые исследования в социальных сетях</li>
         <li>Email маркетинг</li>
     </ul>
-</div>
 
-<div class="marketing-body-block_5">
-    <div class="marketing-body-block_5-item_number">1</div>
-    <div class="marketing-body-block_5-item_text">Специалисты по маркетингу компании Азбука Вебмедиа имеют научные степени в области
+<div class="body-table3 magrin_top_20">
+    <div class="body-table3-item_number">1</div>
+    <div class="body-table3-item_text">Специалисты по маркетингу компании Азбука Медиа Групп имеют научные степени в области
         экономики и маркетинга и обладают огромным опытом практической деятельности
         в бизнес сфере</div>
-    <div class="marketing-body-block_5-item_number">2</div>
-    <div class="marketing-body-block_5-item_text">В нашей компании Вы можете заказать как комплексное исследование всего рынка так и
+    <div class="body-table3-item_number">2</div>
+    <div class="body-table3-item_text">В нашей компании Вы можете заказать как комплексное исследование всего рынка, так и
         отдельные исследования по интересующим вас критериям</div>
-    <div class="marketing-body-block_5-item_number">3</div>
-    <div class="marketing-body-block_5-item_text">Мы поможем вам не только собрать и проанализировать информацию но и дадим
+    <div class="body-table3-item_number">3</div>
+    <div class="body-table3-item_text">Мы поможем вам не только собрать и проанализировать информацию, а так же дадим
         рекомендации по организации рекламных и PR кампаний в глобальной сети</div>
 </div>
 
-<div class="marketing-body-block_7">Цены и сроки</div>
+<div class="body-block_9 magrin_top_20">Цены и сроки</div>
 
-<div class="marketing-body-block_8">
+<div class="body-block_6 body-background magrin_top_10">
     В зависимости от сложности поставленной задачи исследования занимают от 1 недели до года. Цены и условия
     обсуждаются с менеджерами отдела маркетинговых исследований. Вы можете заказать звонок прямо сейчас и
-    с вами свяжутся в удобное для вас время
+    с вами свяжутся в удобное для вас время.
 </div>
 
 
-<div class="marketing-body-block_9">
+<div class="marketing-body-slider">
     <?php echo $this->Marketing(); ?>
 </div>
 
-<div class="promotion-body-block_9">
+<div class="body-block_7 magrin_top_10">
     <a href="<?= $this->url('page', array('action' => 'checkout')) ?>">
-        <div class="promotion-body-button_order">ОФОРМИТЬ ЗАКАЗ</div>
+        <div class="body-button">ОФОРМИТЬ ЗАКАЗ</div>
     </a>
-    <div class="promotion-body-button_order">РАСЧИТАТЬ ЦЕНУ</div>
+    <div class="body-button">РАСЧИТАТЬ ЦЕНУ</div>
 </div>
 
 <script>
@@ -91,7 +89,7 @@
             slides = 4;
         }
 
-        var slider = $('.marketing-body-block_9').bxSlider({
+        var slider = $('.marketing-body-slider').bxSlider({
             slideWidth: 105,
             minSlides: 1,
             maxSlides: slides,
