--- a/module/Page/view/page/page/pr.phtml
+++ b/module/Page/view/page/page/pr.phtml
@@ -9,62 +9,60 @@
 </div>
 <div class="title_text">Реклама и PR</div>
 
-<div class="promotion-body-block_1">
+<div class="body-block_1 magrin_top_10">
     <p>Это - комплекс мер, направленый на увеличение посещения ресурса<br/>
         целевой аудиторий. Работа над повышением узнаваемости бренда: люди знают о Вас<br/>
         и ищут не разные компании, предлагающие подобные услуги, а именно Вас</p>
 </div>
 
-<div class="publicity-body-block_2">
+<div class="pr-body-image magrin_top_20">
 </div>
 
-<div class="promotion-body-block_2">
+<div class="body-block_2 magrin_top_20">
     <p>Мы предлагает вам следующие услуги по<br/>
         PR и рекламе в социальных сетях:</p>
 </div>
 
-<div class="publicity-body-block_6">
-    <ul>
-        <li>Раскрутка групп в социальных сетях</li>
-        <li>Увеличение узнаваемости вашего бренда</li>
-        <li>Раскрутка в социальных сетях</li>
-        <li>Оформление групп и страниц в социальных сетях</li>
-        <li>Целевая реклама с продающими объявлениями, имеющими высокое соотношение<br/>Просмотр – заявка</li>
-    </ul>
-</div>
+<ul class="body-ul_1 magrin_top_20">
+    <li>Раскрутка групп в социальных сетях</li>
+    <li>Увеличение узнаваемости вашего бренда</li>
+    <li>Раскрутка в социальных сетях</li>
+    <li>Оформление групп и страниц в социальных сетях</li>
+    <li>Целевая реклама с продающими объявлениями, имеющими высокое соотношение<br/>Просмотр – заявка</li>
+</ul>
 
-<div class="promotion-body-table">
-    <div class="promotion-body-table_title"></div>
-    <div class="promotion-body-table-cell">
-        <div class="promotion-body-table-cell_number">1 </div>
-        <div class="promotion-body-table-cell_text">Более 300 успешно реализованых проектов</div>
+<div class="body-table magrin_top_20">
+    <div class="body-table_title"></div>
+    <div class="body-table-cell">
+        <div class="body-table-cell_number">1 </div>
+        <div class="body-table-cell_text">Более 300 успешно реализованых проектов</div>
     </div>
-    <div class="promotion-body-table-cell">
-        <div class="promotion-body-table-cell_number">2 </div>
-        <div class="promotion-body-table-cell_text">Только  положительные  отзывы</div>
+    <div class="body-table-cell">
+        <div class="body-table-cell_number">2 </div>
+        <div class="body-table-cell_text">Только  положительные  отзывы</div>
     </div>
-    <div class="promotion-body-table-cell">
-        <div class="promotion-body-table-cell_number">3 </div>
-        <div class="promotion-body-table-cell_text">Не Используем публичные технологии,  мы разрабатываем свои</div>
+    <div class="body-table-cell">
+        <div class="body-table-cell_number">3 </div>
+        <div class="body-table-cell_text">Не Используем публичные технологии,  мы разрабатываем свои</div>
     </div>
-    <div class="promotion-body-table-cell">
-        <div class="promotion-body-table-cell_number">4 </div>
-        <div class="promotion-body-table-cell_text">Постоянное снижение  стоимости за переход нового клиента</div>
+    <div class="body-table-cell">
+        <div class="body-table-cell_number">4 </div>
+        <div class="body-table-cell_text">Постоянное снижение  стоимости за переход нового клиента</div>
     </div>
 </div>
 
-<div class="promotion-body-block_5">Мы даем гарантию, что:<br/>Вы не пожелаете разрывать с нами деловые отношения</div>
+<div class="body-block_4 magrin_top_20">Мы даем гарантию, что:<br/>Вы не пожелаете разрывать с нами деловые отношения</div>
 
-<div class="promotion-body-block_7">от 200 уе в месяц*</div>
+<div class="body-block_5 magrin_top_20">от 200 уе в месяц*</div>
 
-<div class="promotion-body-block_8">*Цена определяется, исходя из поставленных задач и сроков на реализацию<br/>
+<div class="body-block_6 magrin_top_20">*Цена определяется, исходя из поставленных задач и сроков на реализацию<br/>
     **Пожалуйста воспользуйтесь формой онлайн связи на сайте, позвоните нам или оставьте свой номер - наш менеджер свяжется с вами в ближайшее время
 </div>
 
-<div class="promotion-body-block_9">
+<div class="body-block_7 magrin_top_20">
     <a href="<?= $this->url('page', array('action' => 'checkout')) ?>">
-        <div class="promotion-body-button_order">ОФОРМИТЬ ЗАКАЗ</div>
+        <div class="body-button">ОФОРМИТЬ ЗАКАЗ</div>
     </a>
-    <div class="promotion-body-button_order">РАСЧИТАТЬ ЦЕНУ</div>
-    <div class="promotion-body-button_order">АНАЛИЗ САЙТА</div>
+    <div class="body-button">РАСЧИТАТЬ ЦЕНУ</div>
+    <div class="body-button">АНАЛИЗ САЙТА</div>
 </div>
