--- a/module/Page/view/page/page/promotion.phtml
+++ b/module/Page/view/page/page/promotion.phtml
@@ -9,38 +9,38 @@
 </div>
 <div class="title_text">Продвижение</div>
 
-<div class="promotion-body-block_1">
-    <p>Это - комплекс мер, направленный на улучшение индексации сайта<br/>
-        поисковыми мимтемами и увеличение посещаемости ресурса</p>
+<div class="body-block_1  magrin_top_10">
+    Это - комплекс мер, направленный на улучшение индексации сайта<br/>
+    поисковыми мимтемами и увеличение посещаемости ресурса
 </div>
 
-<div class="promotion-body-block_2">
-    <p>Азбука вебмедиа™ предлагает вам следущие услуги<br/>
-        по раскрутке, продвижению и рекламе в интернете:</p>
+<div class="body-block_2 magrin_top_20">
+    Азбука Mediagroup предлагает вам следущие услуги<br/>
+    по раскрутке, продвижению и рекламе в интернете:
 </div>
 
-<div class="promotion-body-table">
-    <div class="promotion-body-table-cell">
-        <div class="promotion-body-table-cell_number">1 </div>
-        <div class="promotion-body-table-cell_text">Вывод вашего сайта на вершину поиска</div>
+<div class="body-table magrin_top_20">
+    <div class="body-table-cell">
+        <div class="body-table-cell_number">1 </div>
+        <div class="body-table-cell_text">Вывод вашего сайта на вершину поиска</div>
     </div>
-    <div class="promotion-body-table-cell">
-        <div class="promotion-body-table-cell_number">2 </div>
-        <div class="promotion-body-table-cell_text">Внутренняя оптимизация и улучшение юзабилити</div>
+    <div class="body-table-cell">
+        <div class="body-table-cell_number">2 </div>
+        <div class="body-table-cell_text">Внутренняя оптимизация и улучшение юзабилити</div>
     </div>
-    <div class="promotion-body-table-cell">
-        <div class="promotion-body-table-cell_number">3 </div>
-        <div class="promotion-body-table-cell_text">Создание и управление компаниями яндекс.директ и google.adwords</div>
+    <div class="body-table-cell">
+        <div class="body-table-cell_number">3 </div>
+        <div class="body-table-cell_text">Создание и управление компаниями яндекс.директ и google.adwords</div>
     </div>
-    <div class="promotion-body-table-cell">
-        <div class="promotion-body-table-cell_number">4 </div>
-        <div class="promotion-body-table-cell_text">Внедрение систем мониторинга эффективности рекламы</div>
+    <div class="body-table-cell">
+        <div class="body-table-cell_number">4 </div>
+        <div class="body-table-cell_text">Внедрение систем мониторинга эффективности рекламы</div>
     </div>
 </div>
 
-<div class="promotion-body-block_3">Почему именнно мы?</div>
+<div class="body-block_3  magrin_top_20">Почему именнно мы?</div>
 
-<ul class="promotion-body-block_4">
+<ul class="body-ul_1 magrin_top_20">
     <li>Наша компания более 10 лет занимается продвижением проектов в интернете</li>
     <li>У нас огромный опыт с целевыми рынками США, Европы и России</li>
     <li>Мы используем самые передовые технологии и всегда добиваемся результата</li>
@@ -48,47 +48,46 @@
     <li>Мы заботимся о ваших бюджетах и всегда стараемся оптимизировать все процессы для уменьшения расходов</li>
 </ul>
 
-<div class="promotion-body-block_5">Мы даем гарантию, что:</div>
+<div class="body-block_4 magrin_top_20">Мы даем гарантию, что:</div>
 
-<div class="promotion-body-block_6">
-    <ul>
-        <li>ваши сайты достигнут целевых показателей и надолго закрепяться на первых позициях</li>
-        <li>оптимизированные нами страницы продуктов и сайты заметно повысят интерес со стороны посетителей</li>
-        <li>сроки выполнения даже самых амбициозных задач не превысят 6 месяцев</li>
-    </ul>
-</div>
+<ul class="body-ul_1 body-background magrin_top_10">
+    <li>ваши сайты достигнут целевых показателей и надолго закрепяться на первых позициях</li>
+    <li>оптимизированные нами страницы продуктов и сайты заметно повысят интерес со стороны посетителей</li>
+    <li>сроки выполнения даже самых амбициозных задач не превысят 6 месяцев</li>
+</ul>
 
-<div class="promotion-body-block_7">Цены:*</div>
+<div class="body-block_5 magrin_top_10">Цены:*</div>
 
-<div class="promotion-body-table2">
-    <div class="promotion-body-table2-cell">
-        <div class="promotion-body-table2-cell_title">от 35 000 руб</div>
-        <div class="promotion-body-table2-cell_text">при продвижении<br/>в России</div>
+<div class="body-table2">
+    <div class="body-table2-cell">
+        <div class="body-table2-cell_title">от 35 000 руб</div>
+        <div class="body-table2-cell_text">при продвижении<br/>в России</div>
     </div>
-    <div class="promotion-body-table2-cell">
-        <div class="promotion-body-table2-cell_title">от 500 у.е</div>
-        <div class="promotion-body-table2-cell_text">в Беларуси,<br/>других странах СНГ</div>
+    <div class="body-table2-cell">
+        <div class="body-table2-cell_title">от 500 у.е</div>
+        <div class="body-table2-cell_text">в Беларуси,<br/>других странах СНГ</div>
     </div>
-    <div class="promotion-body-table2-cell">
-        <div class="promotion-body-table2-cell_title">от 750 у.е</div>
-        <div class="promotion-body-table2-cell_text">в Англоязычном сегменте<br/>сети (США, Европа)</div>
+    <div class="body-table2-cell">
+        <div class="body-table2-cell_title">от 750 у.е</div>
+        <div class="body-table2-cell_text">в Англоязычном сегменте<br/>сети (США, Европа)</div>
     </div>
 </div>
 
-<div class="promotion-body-block_8">* Стоимость продвижения формируется на основе целевых ключевых запросов, возраста сайта, уровня конкуренции, и необходимых позиций в поисковых системах.</div>
+<div class="body-block_6 magrin_top_10">
+    * Стоимость продвижения формируется на основе целевых ключевых запросов, возраста сайта, уровня конкуренции, и необходимых позиций в поисковых системах.<br/>
+    ** Для расчета стоимости, пожалуйста воспользуйтесь формой связи на сайте, позвоните нам или оставьте свой номер - наш менеджер свяжется с вами в ближайшее время.
+</div>
 
-<div class="promotion-body-block_8">** Для расчета стоимости, пожалуйста воспользуйтесь формой связи на сайте, позвоните нам или оставьте свой номер - наш менеджер свяжется с вами в ближайшее время.</div>
-
-<div class="promotion-body-carusel">
+<div class="promotion-body-slider">
     <?php echo $this->Promotion(); ?>
 </div>
 
-<div class="promotion-body-block_9">
+<div class="body-block_7 magrin_top_20">
     <a href="<?= $this->url('page', array('action' => 'checkout')) ?>">
-        <div class="promotion-body-button_order">ОФОРМИТЬ ЗАКАЗ</div>
+        <div class="body-button">ОФОРМИТЬ ЗАКАЗ</div>
     </a>
-    <div class="promotion-body-button_order">РАСЧИТАТЬ ЦЕНУ</div>
-    <div class="promotion-body-button_order">АНАЛИЗ САЙТА</div>
+    <div class="body-button">РАСЧИТАТЬ ЦЕНУ</div>
+    <div class="body-button">АНАЛИЗ САЙТА</div>
 </div>
 
 <script>
@@ -122,7 +121,7 @@
 
                 promotionSlider.destroySlider();
                 promotionSlider.reloadSlider({
-                    slideWidth: $('.promotion .promotion-body-carusel').width(),
+                    slideWidth: $('.promotion .promotion-body-slider').width(),
                     startSlide: start,
                     moveSlides: 1,
                     slideMargin: 0,
@@ -133,8 +132,8 @@
         });
 
         pager_controls();
-        var promotionSlider = $('.promotion .promotion-body-carusel').bxSlider({
-            slideWidth: $('.promotion .promotion-body-carusel').width(),
+        var promotionSlider = $('.promotion .promotion-body-slider').bxSlider({
+            slideWidth: $('.promotion .promotion-body-slider').width(),
             randomStart: true,
             moveSlides: 1,
             slideMargin: 0,
