--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -14,7 +14,7 @@
 
         <!-- Le styles -->
         <?php
-        echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'))
+        echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.jpg'))
                 ->prependStylesheet($this->basePath() . '/css/style.css')
                 ->prependStylesheet($this->basePath() . '/css/jquery.bxslider.css')
         ?>
@@ -132,7 +132,7 @@
 
                 $('.menu').on('click', function () {
                     hoverHeight = $('.wrap-menu-items').height();
-                    if ($('.wrap-menu').height() == originalHeight) {
+                    if (parseInt($('.wrap-menu').height()) == originalHeight) {
                         $('.wrap-menu').animate({height: hoverHeight}, speed);
                     } else {
                         $('.wrap-menu').animate({height: originalHeight}, speed);
