--- a/module/Page/view/page/page/portfolio.phtml
+++ b/module/Page/view/page/page/portfolio.phtml
@@ -7,26 +7,24 @@
     <?php echo $this->Portfolio(); ?>
 </div>
 
-<div class="promotion-body-block_9">
+<div class="body-block_7">
     <a href="<?= $this->url('page', array('action' => 'checkout')) ?>">
-        <div class="promotion-body-button_order">ОФОРМИТЬ ЗАКАЗ</div>
+        <div class="body-button">ОФОРМИТЬ ЗАКАЗ</div>
     </a>
 </div>
 
 <script>
-    $(document).ready(function() {
+    $(document).ready(function () {
         var width = 720;
-        
-        if ($('.content').width() < 481 || screen.width < 481) {
-                        width = screen.width;
-                    } else if ($('.content').width() < 800 || screen.width < 800) {
-                        width = 480;
-                    } else {
-                        width = 720;
-                    }
-        
 
-        $('.portfolio-body-slider-item_images').bxSlider({
+        if ($('.content').width() < 800 || screen.width < 800) {
+            width = 320;
+        } else {
+            width = 720;
+        }
+
+
+        $('.portfolio-body-slider-item_left').bxSlider({
             slideWidth: 365,
             mode: 'vertical',
             moveSlides: 1,
