--- a/module/Page/view/partial/design.phtml
+++ b/module/Page/view/partial/design.phtml
@@ -1,9 +1,9 @@
 <?php $count = 1; ?>
 <?php foreach ($this->portfolios as $key => $portfolio) { ?>
     <?php if ($count % 4 == 1) { ?>
-        <div class="design-body-banners_row">
+        <div class="design-body-slider_row">
         <?php } ?>
-        <a href="<?= $this->url('page', array('action' => 'portfolio')) ?>"><div class="design-body-banners_item" style="background-image: url('<?= substr($portfolio['banner'], 6) ?>')"></div></a>
+        <a href="<?= $this->url('page', array('action' => 'portfolio')) ?>"><div class="design-body-slider_item" style="background-image: url('<?= substr($portfolio['banner'], 6) ?>')"></div></a>
             <?php if ($count % 4 == 0) { ?>
         </div>
     <?php } ?>
